[package]
name = "golbe"
version = "0.1.0"
authors = ["Robin van Leeuwen <robin@mintlab.nl>"]
edition = "2018"

[lib]
name = "golbe"
path = "src/lib.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
warp = "0.2.5"
parking_lot = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0.60"